made friend search function, made nav bar, and side bars sticky, corrected spacing of various nodes

--- a/client/src/css files/Home.css
+++ b/client/src/css files/Home.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: flex-start;
 }
 
 .leftPanel, .center, .rightPanel {
@@ -10,6 +11,8 @@
 
 .leftPanel {
     visibility: visible;
+    position: sticky;
+    top: 100px;
 }
 
 .feed {
@@ -18,6 +21,8 @@
 
 .rightPanel {
     visibility: visible;
+    position: sticky;
+    top: 100px;
 }
 
 .card {
@@ -130,20 +135,23 @@
 }
 
 .comment {
-    border: 1px solid #3B4131;
+    /* border: 1px solid #3B4131; */
     border-radius: 15px;
     padding: 13px;
     font-size: 12px;
     margin: 0px 0px 0px 10px;
+    background-color: #dbd0b2;
 }
 
 .comment_likes {
     font-size: 12px;
-    margin: 0px;
+    margin: 0px 0px 0px 55px;
 }
 
 .comment_likes button {
     margin: 0px 10px 0px 0px;
+    border-radius: 10px;
+    padding: 2px 6px;
 }
 
 .user_and_post_owner {
@@ -163,4 +171,8 @@
 
 .media {
     margin: 12px 25px;
+}
+
+.comment_obj {
+    margin: 10px 0px;
 }
